# brztek

./: .gitignore  Cargo.toml  README.md  Youtube webhooks  config.json  database.sqlite
assets/images/default-pp/: source.txt
clearurl/: Cargo.toml  README.md
clearurl/src/: lib.rs
migrations/: 20230129150501_migration.sql  20230212192543_migration_config.sql  20230212202358_config.sql  20230222210920_role.sql  20230411103339_roulette_count.sql  20230611153758_initial.sql  20231112192603_add_yt_sub_table.sql  20231119150047_cmd_count.sql  20240205113342_mention_roles.sql
src/: builtins.rs  clearurl.rs  commands.rs  config.rs  database.rs  db.rs  draw.rs  handlers.rs  hooks.rs  levels.rs  main.rs  misc.rs  poise_commands.rs  roulette.rs  util.rs
src/admin/: commands.rs
src/admin/commands/: import_mee6_levels.rs  mod.rs  selectmenu.rs  set_xp.rs  shutdown.rs
src/commands/: admin.rs  config.rs  general.rs  help.rs  hooks.rs  levels.rs  misc.rs  mod.rs  ranking.rs  roulette.rs  timeouts.rs  youtube.rs
src/commands/levels/: draw.rs  handle_message.rs  queries.rs  user_level.rs
src/commands/misc/: queries.rs
src/commands/roulette/: draw.rs  queries.rs
src/commands/youtube/: helpers.rs  queries.rs
src/draw/: rank_card.rs  roulette_killfeed.rs  top_card.rs
src/handlers/: error_handler.rs  event_handler.rs  mod.rs
src/handlers/event_handler/: member.rs  message.rs
src/levels/: cards.rs  commands.rs  constants.rs  draw.rs  handle_message.rs  mod.rs  models.rs  queries.rs  rank_card.rs  top_ten_card.rs  user_level.rs  xp.rs
src/levels/cards/: rank_card.rs  top_card.rs
src/levels/commands/: mod.rs  rank.rs  top.rs
src/levels/draw/: mod.rs  rank_card.rs  top_card.rs
src/levels/func/: message_xp.rs  mod.rs  resize_avatar.rs  xp_func.rs
src/mention_roles/: mod.rs  queries.rs  util.rs
src/mention_roles/commands/: add.rs  create.rs  delete.rs  gimmeroles.rs  mod.rs  selectmenu.rs
src/misc/: commands.rs  consts.rs  mod.rs  queries.rs
src/misc/commands/: bigrig.rs  clean.rs  learn.rs  learned.rs  mod.rs  ping.rs  setcolor.rs
src/poise_commands/: admin.rs  general.rs  levels.rs
src/roulette/: commands.rs  consts.rs  draw.rs  func.rs  mod.rs  models.rs  queries.rs
src/roulette/commands/: mod.rs  rffstar.rs  roulette.rs  statroulette.rs  toproulette.rs
src/slash_commands/: admin.rs  general.rs
src/slash_commands/admin/: pub_channel.rs  set.rs
src/slash_commands/general/: learn.rs
src/utils/: config.rs  db.rs  levels.rs  mod.rs  rank_card.rs  top_ten_card.rs  user_level.rs
src/utils/levels/: mod.rs  rank_card.rs  top_ten_card.rs  user_level.rs  xp.rs
src/youtube/: constants.rs  func.rs  mod.rs  models.rs  queries.rs
src/youtube/commands/: list.rs  mod.rs  search.rs  sub.rs  sub_details.rs  unsub.rs
src/youtube/listeners/: expiration_check.rs  hook_listener.rs  mod.rs
