[package]
name = "brztek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["brzthook"]

[dependencies]
dotenvy = "0.15"
poise = "0.6"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
time = "0.3"
piet-common = { version = "0.6", features = ["png"] }
tracing-appender = "0.2.2"
regex = "1.10"
url = "2.5"
brzthook = { git = "https://github.com/swandyr/brzthook" }
toml = "0.8.8"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "webp"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "json", "sqlite", "runtime-tokio", "time"]
