[package]
name = "clearurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
reqwest = "0.11.14"
serde = "1.0.154"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
