[package]
name = "clearurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
